<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:backgroundTint="#FFFFFF"
    android:orientation="vertical">

    <Spinner
        android:id="@+id/auto_choose_spinner"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/historyRecycleView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="?attr/colorButtonNormal">

        <Button
            android:id="@+id/go_to_collision_button"
            android:layout_width="90dp"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:drawableTop="@drawable/ic_car_crash"
            android:text="@string/new_collision"
            android:textSize="10dp" />

        <Button
            android:id="@+id/go_to_tank_form_button"
            android:layout_width="90dp"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_toEndOf="@id/go_to_collision_button"
            android:drawableTop="@drawable/ic_new_tankup"
            android:text="@string/new_tankup"
            android:textSize="10dp"/>

        <Button
            android:id="@+id/go_to_repair_button"
            android:layout_width="90dp"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_toStartOf="@+id/new_car_button"
            android:drawableTop="@drawable/ic_repair"
            android:text="@string/new_repair"
            android:textSize="10dp" />

        <Button
            android:id="@+id/new_car_button"
            android:layout_width="90dp"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_alignParentEnd="true"
            android:drawableTop="@drawable/ic_new_car"
            android:text="@string/new_car"
            android:textSize="10dp" />
         
    </RelativeLayout>
</LinearLayout>